# triggle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  go.work
cmake/sokol/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/e/: engine_api.h  game_api.h
engine/src/: engine.cpp  engine.hpp  main.cpp  main.mm  shader.glsl  shader.h
game/: CMakeLists.txt  Makefile  game.cpp  game.go
game_go/: CMakeLists.txt  engine_api_adapter.go  game.go  game_api_impl.go  go.mod  libgame.h
